--- a/htmlStructureSolutions/main.css
+++ b/htmlStructureSolutions/main.css
@@ -33,6 +33,21 @@ body {
     width: 200px;
 }
 
+/* When the width is 600px or lower, perform the following actions. */
+@media screen and (max-width: 600px) {
+    /* For the "ACM UCSD Meme Gen" header, make the margin-left -300px and the opacity 0. */
+    #navbar > h1 {
+        margin-left: -300px;
+        opacity: 0;
+    }
+
+    /* For the div containing the links, change the justify-content to "space-around" and the width to 100%. */
+    #navlinks {
+        justify-content: space-around;
+        width: 100%;
+    }
+}
+
 /* Style the navigation links to not have the normal underline effect, and when the mouse hovers over, give the links a different effect. */
 .links {
     color: white;
@@ -56,8 +71,16 @@ body {
 
 /* Style the meme image to ensure that it would only take up about half of the screen (vh unit recommended). */
 .memeImg {
-    height: 50vh;
-    width: auto;
+    height: auto;
+    width: 500px;
+}
+
+/* When the width is 600px or lower, perform the following actions. */
+@media screen and (max-width: 600px) {
+    /* For the meme image, make the width about 90%. */
+    .memeImg {
+        width: 90%;
+    }
 }
 
 /* Style the textboxes to have the direction of the textboxes be vertical. */
