--- a/meme-gen/src/pages/MemeGallery/style.css
+++ b/meme-gen/src/pages/MemeGallery/style.css
@@ -1,5 +1,5 @@
 /* Style the memes div to be equal to 100% width with a flex display. */
 .memes {
-    display: flex;
-    width: 100%;
+    display: inline-block;
+    width: 300px;
 }
