--- a/htmlStructure/main.css
+++ b/htmlStructure/main.css
@@ -10,6 +10,8 @@ body {
     padding: 0;
 }
 
+/***** Begin: NavBar Component Style *****/
+
 /* Style the navbar to be blue with the links on the right side. */
 #navbar {
     background-color: #22ACEA;
@@ -49,16 +51,33 @@ body {
     background-color: rgb(26, 124, 170);
 }
 
+/***** End: NavBar Component Style *****/
+
+
+/***** Begin: TextBox Component *****/
+
+/* Style each individual textbox to be a smaller width. */
+.textbox {
+    align-self: center;
+    width: 200px;
+}
+
+/***** End: TextBox Component *****/
+
+/***** Begin: MemeGenerator Component *****/
+
 /* Style the contents div to ensure that every element will align in the center. */
 #content {
     text-align: center;
 }
+
 
 /* Style the meme image to ensure that it would only take up about half of the screen (vh unit recommended). */
 .memeImg {
     height: 50vh;
     width: auto;
 }
+
 
 /* Style the textboxes to have the direction of the textboxes be vertical. */
 .textboxes {
@@ -68,25 +87,26 @@ body {
     margin-top: 10px;
 }
 
-/* Style each individual textbox to be a smaller width. */
-.textbox {
-    align-self: center;
-    width: 200px;
-}
-
 /* Style the submit meme button to have a margin-top value of 10px. */
 .button {
     margin-top: 10px;
 }
 
+/***** End: MemeGenerator Component *****/
 
-/** For gallery.html file.**/
+
+/***** Begin: MemeGallery Component *****/
 
 /* Style the memes div to be equal to 100% width with a flex display. */
 .memes {
     display: flex;
     width: 100%;
 }
+
+/***** End: MemeGallery Component *****/
+
+
+/***** Begin: MemeCard Component *****/
 
 /* Style the meme-card to have a solid border with color blue. Also, make a set width for each meme-card.*/
 .meme-card {
@@ -100,6 +120,8 @@ body {
 .meme-card > img {
     width: 100%;
 }
+
+/***** End: MemeCard Component *****/
 
 /* Style the footer so that the height of it is 200px. */
 #footer {
